初步完成xml文件读取生成步骤

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,4 +16,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "FastInflate"
 include ':app'
+include ':FastInflatePlugin'
 include ':FastInflate'
