--- a/FastInflate/build.gradle
+++ b/FastInflate/build.gradle
@@ -1,35 +1,61 @@
 plugins {
-    id 'kotlin'
-    id 'java-gradle-plugin'
+    id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
     id 'maven-publish'
-    id 'groovy'
+}
+
+android {
+    namespace 'com.dreamgyf.android.plugin.fastinflate'
+    compileSdk 32
+
+    defaultConfig {
+        minSdk 21
+        targetSdk 32
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+}
+
+task androidSourcesJar(type: Jar) {
+    archiveClassifier.set('sources')
+    from android.sourceSets.main.java.source
 }
 
 publishing {
     publications {
         release(MavenPublication) {
             groupId = 'com.dreamgyf.android.plugin'
-            artifactId = 'FastInflate'
+            artifactId = 'FastInflatePlugin'
             version = '0.1'
-            from components.java
-        }
-    }
-}
 
-gradlePlugin {
-    plugins {
-        fastInflate {
-            id = 'android-fastinflate'
-            implementationClass = 'com.dreamgyf.android.plugin.fastinflate.FastInflate'
-            version '0.1'
+            def artifactOutputPath = "$buildDir/outputs/aar/${project.getName()}-release.aar"
+            artifact(artifactOutputPath)
+            artifact androidSourcesJar
         }
     }
 }
 
 dependencies {
-    //Groovy DSL
-    implementation gradleApi()
-    //Gradle DSL
-    implementation localGroovy()
-    implementation 'com.android.tools.build:gradle:7.3.0'
+
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
