--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
-    id 'android-fastinflate' version '0.1' apply false
+    alias(libs.plugins.android.app) apply false
+    alias(libs.plugins.android.lib) apply false
+    alias(libs.plugins.kotlin.android) apply false
+    alias(libs.plugins.gradle.publish) apply false
+    alias(libs.plugins.dreamgyf.fastinflate) apply false
 }
+
+if (!file("../configs.gradle").exists()) {
+    throw new GradleException(
+            "Could not found file \"../configs.gradle\", " +
+                    "please clone parent project https://github.com/dreamgyf/AndroidLibraries"
+    )
+}
+apply from: "../configs.gradle"
