--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,13 @@ pluginManagement {
         mavenLocal()
     }
 }
+
+if (!file("../libs.toml").exists()) {
+    throw new GradleException(
+            "Could not found file \"../libs.toml\", " +
+                    "please clone parent project https://github.com/dreamgyf/AndroidLibraries"
+    )
+}
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
@@ -13,8 +20,14 @@ dependencyResolutionManagement {
         mavenCentral()
         mavenLocal()
     }
+    versionCatalogs {
+        libs {
+            from(files("../libs.toml"))
+        }
+    }
 }
 rootProject.name = "FastInflate"
-include ':app'
-include ':FastInflatePlugin'
+
+include ':Sample'
 include ':FastInflate'
+include ':FastInflatePlugin'
