--- a/Sample/build.gradle
+++ b/Sample/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 android {
-    namespace 'com.dreamgyf.android.plugin.fastinflate'
+    namespace 'com.dreamgyf.android.plugin.fastinflate.sample'
     compileSdk configs.android.compileSdk
 
     defaultConfig {
-        applicationId "com.dreamgyf.android.plugin.fastinflate"
+        applicationId "com.dreamgyf.android.plugin.fastinflate.sample"
         minSdk configs.android.minSdk
         targetSdk configs.android.targetSdk
         versionCode 1
