--- a/Sample/settings.gradle
+++ b/Sample/settings.gradle
@@ -7,9 +7,9 @@ pluginManagement {
     }
 }
 
-if (!file("../libs.toml").exists()) {
+if (!file("../../libs.toml").exists()) {
     throw new GradleException(
-            "Could not found file \"../libs.toml\", " +
+            "Could not found file \"../../libs.toml\", " +
                     "please clone parent project https://github.com/dreamgyf/AndroidLibraries"
     )
 }
@@ -22,16 +22,10 @@ dependencyResolutionManagement {
     }
     versionCatalogs {
         libs {
-            from(files("../libs.toml"))
+            from(files("../../libs.toml"))
         }
     }
 }
-rootProject.name = "FastInflate"
 
-include ':FastInflate'
-include ':FastInflatePlugin'
-
-def includeSample = System.getenv("FASTINFLATE_INCLUDE_SAMPLE")
-if (includeSample != null && includeSample == "true") {
-    includeBuild 'Sample'
-}
+rootProject.name = "Sample"
+include ':app'
