修复插件依赖错误

--- a/FastInflatePlugin/build.gradle
+++ b/FastInflatePlugin/build.gradle
@@ -24,6 +24,9 @@ if (file.exists()) {
 }
 
 dependencies {
+    implementation localGroovy()
+    implementation gradleApi()
+
     implementation libs.android.gradle.tools
     implementation libs.kotlinpoet
 }
