--- a/Sample/app/build.gradle
+++ b/Sample/app/build.gradle
@@ -55,5 +55,8 @@ dependencies {
     implementation libs.android.material
     implementation libs.androidx.constraintlayout
 
+    testImplementation libs.test.junit
+    testImplementation libs.test.robolectric
+
     implementation 'com.dreamgyf.android.plugin:FastInflate:0.1.0-alpha-03'
 }
