--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,12 +38,7 @@ jobs:
 
       - name: Prepare for Gradle
         working-directory: 'AndroidLibraries/FastInflate'
-        env:
-          GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
-        run: |
-          mkdir -p ~/.gradle/
-          echo ${GRADLE_PROPERTIES} > ~/.gradle/gradle.properties
-          chmod +x gradlew
+        run: chmod +x gradlew
 
       - name: Publish FastInflatePlugin to local maven
         working-directory: 'AndroidLibraries/FastInflate'
