--- a/Sample/Module1/build.gradle
+++ b/Sample/Module1/build.gradle
@@ -40,5 +40,5 @@ dependencies {
     testImplementation libs.test.junit
     testImplementation libs.test.robolectric
 
-    implementation 'com.dreamgyf.android.plugin:FastInflate:0.1.0-alpha-04'
+    implementation fastinflate
 }
