--- a/Sample/app/build.gradle
+++ b/Sample/app/build.gradle
@@ -29,6 +29,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
