--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,13 +8,10 @@ jobs:
   Test_For_FastInflate:
     runs-on: ubuntu-latest
     steps:
-      - name: Clone parent project AndroidLibraries
-        run: git clone https://github.com/dreamgyf/AndroidLibraries.git
-
       - name: Clone project FastInflate
         uses: actions/checkout@v3
         with:
-          path: 'AndroidLibraries/FastInflate'
+          path: 'FastInflate'
 
       - name: Fetch key file
         uses: actions/checkout@v3
@@ -31,17 +28,17 @@ jobs:
           cache: gradle
 
       - name: Prepare for Gradle
-        working-directory: 'AndroidLibraries/FastInflate'
+        working-directory: 'FastInflate'
         run: chmod +x gradlew
 
       - name: Publish FastInflatePlugin to local maven
-        working-directory: 'AndroidLibraries/FastInflate'
+        working-directory: 'FastInflate'
         run: |
           ./gradlew :FastInflatePlugin:assemble
           ./gradlew :FastInflatePlugin:publishToMavenLocal
 
       - name: Publish FastInflate to local maven
-        working-directory: 'AndroidLibraries/FastInflate'
+        working-directory: 'FastInflate'
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
@@ -53,7 +50,7 @@ jobs:
           ./gradlew :FastInflate:publishToMavenLocal
 
       - name: Do Unit Test for :Sample:app
-        working-directory: 'AndroidLibraries/FastInflate/Sample'
+        working-directory: 'FastInflate/Sample'
         run: |
           chmod +x gradlew
           ./gradlew :app:test
@@ -66,13 +63,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: Test_For_FastInflate
     steps:
-      - name: Clone parent project AndroidLibraries
-        run: git clone https://github.com/dreamgyf/AndroidLibraries.git
-
       - name: Clone project FastInflate
         uses: actions/checkout@v3
         with:
-          path: 'AndroidLibraries/FastInflate'
+          path: 'FastInflate'
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -82,11 +76,11 @@ jobs:
           cache: gradle
 
       - name: Prepare for Gradle
-        working-directory: 'AndroidLibraries/FastInflate'
+        working-directory: 'FastInflate'
         run: chmod +x gradlew
 
       - name: Publish FastInflatePlugin
-        working-directory: 'AndroidLibraries/FastInflate'
+        working-directory: 'FastInflate'
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
@@ -104,7 +98,7 @@ jobs:
       - name: Clone project FastInflate
         uses: actions/checkout@v3
         with:
-          path: 'AndroidLibraries/FastInflate'
+          path: 'FastInflate'
 
       - name: Fetch key file
         uses: actions/checkout@v3
@@ -121,11 +115,11 @@ jobs:
           cache: gradle
 
       - name: Prepare for Gradle
-        working-directory: 'AndroidLibraries/FastInflate'
+        working-directory: 'FastInflate'
         run: chmod +x gradlew
 
       - name: Publish FastInflate
-        working-directory: 'AndroidLibraries/FastInflate'
+        working-directory: 'FastInflate'
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
