--- a/Sample/build.gradle
+++ b/Sample/build.gradle
@@ -1,21 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    alias(libs.plugins.android.app) apply false
-    alias(libs.plugins.android.lib) apply false
-    alias(libs.plugins.kotlin.android) apply false
+    id 'com.android.application' version '7.3.0' apply false
+    id 'com.android.library' version '7.3.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'com.dreamgyf.android.fastinflate' version '0.1.0-alpha-07' apply false
-}
-
-if (!file("../../configs.gradle").exists()) {
-    throw new GradleException(
-            "Could not found file \"../../configs.gradle\", " +
-                    "please clone parent project https://github.com/dreamgyf/AndroidLibraries"
-    )
-}
-apply from: "../../configs.gradle"
-
-def fastinflate = "com.dreamgyf.android.plugin:FastInflate:0.1.0-alpha-07"
-
-allprojects {
-    it.ext.fastinflate = fastinflate
 }
