--- a/settings.gradle
+++ b/settings.gradle
@@ -7,12 +7,6 @@ pluginManagement {
     }
 }
 
-if (!file("../libs.toml").exists()) {
-    throw new GradleException(
-            "Could not found file \"../libs.toml\", " +
-                    "please clone parent project https://github.com/dreamgyf/AndroidLibraries"
-    )
-}
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
@@ -20,13 +14,10 @@ dependencyResolutionManagement {
         mavenCentral()
         mavenLocal()
     }
-    versionCatalogs {
-        libs {
-            from(files("../libs.toml"))
-        }
-    }
 }
 rootProject.name = "FastInflate"
 
 include ':FastInflate'
 include ':FastInflatePlugin'
+
+includeBuild 'Sample'
